# NEO-2

./: .gitignore  0_README_FOR_PARALLEL  A2drive_neo2.f90  BACKLOG.md  Build.md  BuildConfig.sample  CHANGELOG  CLAUDE.md  CMakeITP-linker.txt  CMakeITP.txt  CMakeLists.txt  CMakeSources.in  CMakeSources.txt  CMakeVSC2-linker.txt  CMakeVSC2.txt  CMakeZID-linker.txt  CMakeZID.txt  Makefile  ProjectConfig.cmake.in  ProjectConfig.cmake.sample.itp  ProjectVersion.cmake.in  Readme.md  SPLINE_ANALYSIS.md  Version.txt  binarysplit_mod.f90  bumpVersion.sh  cmake_version.f90.in  codecov.yml  collision_operator.f90  collision_operator_mems.f90  collop_bspline.f90  collop_bspline2.f90  collop_compute.f90  collop_definitions.f90  collop_laguerre.f90  collop_polynomial.f90  collop_spline.f90  collop_spline4.f90  compute_resonance_conditions.f90  debug_bicgstab.f90  (+62 more)
COMMON/: CMakeLists.txt  ProjectConfig.cmake.in  ProjectConfig.cmake.in.intel  amn_mod.f90  bdivfree.f90  bdivfree_mod.f90  bicgstab_mod.f90  binarysplit_int.f90  binarysplit_mod.f90  bspline_routines_mod.f90  c_fortran_zgssv.c  circtokfield.f90  cmake_version.f90.in  collision_operator.f90  collision_operator_mems.f90  collisionality_mod.f90  collop.f90  collop_bspline.f90  collop_compute.f90  collop_laguerre.f90  collop_nbi.f90  collop_polynomial.f90  collop_spline.f90  compute_aiota.f90  coordinates_of_old_model.f90  development.f90  device_mod.f90  er_rotation_mod.f90  extract_fluxcoord_mod.f90  extremum_mod.f90  field_c_mod.f90  field_divB0.f90  field_eq_mod.f90  field_mod.f90  field_param.f90  flint_mod.f90  fluxsplitter.f90  gfactor_mod.f90  gfunc_neo2_oct_2010.f90  global_parameters.f90  (+91 more)
COMMON/CMAKE_TOOLS/: FindSuperLU.cmake  MacroCompareVersionStrings.cmake
COMMON/MyMPILib/: CMakeLists.txt
DOC/: CMakeLists.txt  Doxyfile  SOLVER_CONFIGURATION.md  coding_style.tex  condor_submit_all_reconstructions_example  condor_submit_example  condor_submit_failed.template  example_pert_field.bc  neo.in.par-full  neo.in.ql-full  neo2.in.par-full  neo2.in.ql-full  ripple_solver_normalizations_and_output.tex  slurm.marconi.example
DOC/2018_DOCUMENTATION/: 2018_Documentation.tex  Makefile  chap1.tex  chap2.tex  chap3.tex  eccd_ref.bib  main.tex  makechapter
DOC/DESIGN/: Solver.md  Splines.md
DOC/Extra-Documents/: Makefile  neo-2-ql-demo_runs.tex
DOC/ExtraDocuments/: Makefile  neo-2-par-eccd_runs.tex  neo-2-ql-demo_runs.tex  omte-force-balance-levels.tex
DOC/ExtraDocumentsTex/: coding_style.tex
DOC/NEO-2-QL_Quick_Start_Manual/: NEO-2_Quick_Start_Manual.odt  clean_dirs.sh  condor_generate_submit.sh  convert_eps_2_pdf.m  exec_collop_precomp.sh  export_plot.m  h52struct.m  plot_2spec.m  plot_4spec_ZWav_wHelCore.m  set_neo2in_fullcalc.sh
DOC/UserDoc/: Bugs.tex  Building.tex  Commands.sty  Input.tex  Introduction.tex  Notes.tex  Output.tex  Programflow.tex  Running.tex  Theory.tex  Todo.tex  main.tex  nbi.tex
MULTI-SPEC-TOOLS/: CMakeLists.txt  ProjectConfig.Debian8.cmake.in  ProjectConfig.cmake.in  h5merge_multispec.f90
NEO-2-PAR/: 0_README  CMakeLists.txt  CMakeSources.in  Neo_2.mk  ProjectConfig.Debian8.cmake.in  ProjectConfig.cmake.in  ProjectConfig.cmake.itp  ProjectConfig.cmake.sample.itp  binarysplit_mod.f90  cmake_version.f90.in  collision_operator_mems.f90  collop_compute.f90  collop_definitions.f90  collop_laguerre.f90  common  compute_aiota.f90  field_divB0.f90  flint.f90  join_ends.f90  join_ripples.f90  join_ripples_int.f90  mag.f90  mag_interface.f90  magdata_for_particles.f90  magnetics.f90  neo2.f90  neo2_par.f90  neo2scheduler_module.f90  neo_magfie.f90  neo_mod.f90  neo_modules.f90  neo_sub.f90  parallelStorage_module.f90  plot_distrf.f90  propagator.f90  rhs_kin.f90  ripple_solver.f90  rk4_kin.f90  solve_system.f90  sparse_mod.f90  (+4 more)
NEO-2-PAR/Build-Release/: BuildConfig.cmake.in
NEO-2-PAR/Scripts/: cp_to_archive.sh  test_full_reconstruct.sh
NEO-2-QL/: A1drive_neo2.f90  CMakeLists.txt  CMakeSources.in  CMakeSources.txt  ProjectConfig.Debian8.cmake.in  ProjectConfig.cmake.in  ProjectConfig.cmake.in.intel  arnoldi_mod.f90  binarysplit_mod.f90  cmake_version.f90.in  collision_operator.f90  collision_operator_mems.f90  collop_compute.f90  collop_definitions.f90  compute_aiota.f90  er_rotation_mod.f90  field_divB0.f90  flint.f90  fluxsplitter.f90  hdf5_tools.f90  helical_response_mod.f90  helical_source_mod.f90  join_diagnostics_mod.f90  join_ends.f90  join_ripples.f90  join_ripples_int.f90  june1.ripple_solver.f90  lagxmm.f90  lagxmm_before2013Dec07.f90  lapack_band.f90  longint.f90  lorentz_projection_diagnostics_mod.f90  mag_interface.f90  magdata_for_particles.f90  magnetics.f90  may30.ripple_solver.f90  multispecies_iteration_sync_mod.f90  neo2.f90  neo2_main.f90  neo2_ql.f90  (+27 more)
NEO-2-QL/Scripts/: tag_version.sh
TEST/: CMakeLists.txt  README_ARNOLDI_CORE_EXTRACTION.md  README_RIPPLE_SOLVER_TESTING.md  debug_sparse.f90  debug_test1.f90  neo2_coordinate_probe.f90  probe_neo2_perturbation_fourier_kernel.f90  spline_cof_original.f90  spline_cof_original_dense.f90  spline_cof_original_full.f90  test_adaptive_tolerance.f90  test_amg_components.f90  test_amg_diagnostics.f90  test_amg_integration.f90  test_amg_isolation.f90  test_amg_realistic.f90  test_amg_simple_matrix.f90  test_amg_standard_cases.f90  test_arnoldi_core_extraction.f90  test_array_sizes.f90  test_besselk.f90  test_bicgstab_illcond.f90  test_bicgstab_l_spline.f90  test_bicgstab_l_validation.f90  test_bicgstab_simple.f90  test_boozmn_read.f90  test_collop_bspline_precompute.f90  test_collop_precompute_mass.f90  test_collop_zero_endpoint.f90  test_cquad_ieee_guard.f90  test_crossing_geometry_padding.f90  test_er_rotation.f90  test_gmres_arnoldi.f90  test_gmres_complete.f90  test_gmres_data_structures.f90  test_gmres_debug.f90  test_gmres_ilu_integration.f90  test_gmres_qr.f90  test_gmres_sparse_solvers_integration.f90  test_gmres_spline_404.f90  (+77 more)
TEST/cmake/: run_python_transport_k_test.sh  test_libneo_tag.sh
TEST/fixtures/: boozmn_test.nc  neo2_invalid_niter.in
TEST/mympilib/: CMakeLists.txt
python/: README.md  pyproject.toml  requirements.txt
(+227 files in other folders)
